syntax = "proto3";

// 命 令 号: 1020
// 命令名称: voice_file_del
// 命令描述: 删除语音文件
// 文件名称: dec1020_vr_file_del.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbVoiceFileDel";

message VoiceFileDelRequest {
  // ATTR: REQUSET
  string file_name = 1; //文件名
}

message VoiceFileDelResponse {

}
